# tui-dispatch

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: book.toml
docs/src/: SUMMARY.md  architecture-additions.md  async.md  boilerplate-reduction.md  debug-layer.md  feature-flags.md  getting-started.md  ideas.md  introduction.md
docs/src/examples/: README.md  counter.md  markdown-preview.md  weather.md
examples/artbox-playground/: Cargo.toml
examples/artbox-playground/src/: action.rs  effect.rs  lib.rs  main.rs  reducer.rs  state.rs
examples/artbox-playground/src/components/: alignment_grid.rs  color_picker.rs  font_selector.rs  gradient_editor.rs  help_bar.rs  mod.rs  playground.rs  preset_panel.rs  preview.rs  spacing_control.rs  text_input.rs
examples/counter/: Cargo.toml
examples/counter/src/: main.rs
examples/markdown-preview/: Cargo.toml
examples/markdown-preview/src/: action.rs  features.rs  main.rs  reducer.rs  state.rs
examples/markdown-preview/src/ui/: mod.rs  render.rs
examples/markdown-preview/src/ui/components/: content_view.rs  mod.rs  status_bar.rs  title_bar.rs
examples/weather/: Cargo.toml  README.md
examples/weather/scripts/: generate_sprites.sh  png_to_ascii.py
examples/weather/sprites/cloudy/: large.txt  medium.txt  small.txt
examples/weather/sprites/drizzle/: large.txt  medium.txt  small.txt
examples/weather/sprites/fog/: large.txt  medium.txt  small.txt
examples/weather/sprites/partly_cloudy/: large.txt  medium.txt  small.txt
examples/weather/sprites/rain/: large.txt  medium.txt  small.txt
examples/weather/sprites/snow/: large.txt  medium.txt  small.txt
examples/weather/sprites/sun/: large.txt  medium.txt  small.txt
examples/weather/sprites/thunderstorm/: large.txt  medium.txt  small.txt
examples/weather/src/: action.rs  api.rs  effect.rs  lib.rs  main.rs  reducer.rs  sprites.rs  state.rs
examples/weather/src/components/: help_bar.rs  location_header.rs  mod.rs  search_overlay.rs  weather_body.rs  weather_display.rs
examples/weather/tests/: action_tests.rs  render_tests.rs
tui-dispatch/: Cargo.toml
tui-dispatch-components/: Cargo.toml
tui-dispatch-components/src/: lib.rs  modal.rs  select_list.rs  text_input.rs
tui-dispatch-core/: Cargo.toml
tui-dispatch-core/src/: action.rs  bus.rs  component.rs  effect.rs  event.rs  features.rs  keybindings.rs  lib.rs  runtime.rs  store.rs  subscriptions.rs  tasks.rs  testing.rs
tui-dispatch-core/src/debug/: action_logger.rs  actions.rs  cell.rs  config.rs  layer.rs  mod.rs  state.rs  table.rs  widgets.rs
tui-dispatch-macros/: Cargo.toml
tui-dispatch-macros/src/: lib.rs
tui-dispatch/src/: lib.rs
tui-dispatch/tests/: debug_state_derive.rs  feature_flags_derive.rs
