[workspace]
resolver = "2"
members = [
    "tui-dispatch",
    "tui-dispatch-core",
    "tui-dispatch-macros",
    "examples/weather",
    "examples/markdown-preview",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/stviva/tui-dispatch"
rust-version = "1.85"
keywords = ["tui", "redux", "state-management", "terminal", "ratatui"]
categories = ["command-line-interface", "development-tools"]

[workspace.dependencies]
tui-dispatch = { version = "0.2.0", path = "tui-dispatch" }
tui-dispatch-core = { version = "0.2.0", path = "tui-dispatch-core" }
tui-dispatch-macros = { version = "0.2.0", path = "tui-dispatch-macros" }

# External deps
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = "0.7"
bitflags = "2"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP/CLI deps (for examples)
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }

# Proc macro deps
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
darling = "0.20"
