[package]
name = "tui-dispatch-core"
description = "Core traits and types for tui-dispatch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
tokio-util.workspace = true
bitflags.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
