[package]
name = "tui-dispatch"
description = "Centralized state management for Rust TUI apps"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tui-dispatch-core.workspace = true
tui-dispatch-macros.workspace = true
