[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "counter"
path = "src/main.rs"

[dependencies]
tui-dispatch = { path = "../../tui-dispatch" }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = "0.7"
